fixed a small issue with the original website's styling and added a sub-class to the first step in the steps list to properly align the step titles and step descriptions vertically

--- a/styles.css
+++ b/styles.css
@@ -421,6 +421,10 @@ STEPS
     line-height: 1;
 }
 
+.step__number-one {
+    margin-right: 7.21px;
+}
+
 .step__description {
     display: flex;
     flex-direction: column;
